--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-select/ng-select": "^14.7.0",
+    "@types/select2": "^4.0.63",
     "bootstrap": "^5.3.6",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
+    "luxon": "^3.6.1",
     "moment": "^2.30.1",
-    "ng-select2-component": "^17.2.5",
+    "ng-select2-component": "^17.2.6",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "select2": "^4.1.0-rc.0",
     "tabulator-tables": "^6.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,6 +37,9 @@
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
+    "@types/luxon": "^3.6.2",
+    "@types/tabulator-tables": "^6.2.6",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
