--- a/package.json
+++ b/package.json
@@ -17,26 +17,39 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-select/ng-select": "^14.7.0",
+    "@popperjs/core": "^2.11.8",
+    "@types/xlsx": "^0.0.35",
     "bootstrap": "^5.3.6",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
-    "ng-select2-component": "^17.2.5",
+    "ng-select2-component": "^17.2.6",
     "rxjs": "~7.8.0",
+    "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.21.0",
     "tabulator-tables": "^6.3.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
+    "@types/tabulator-tables": "^6.2.6",
+    "i": "^0.3.7",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm": "^11.3.0",
+    "or": "^0.2.0",
     "typescript": "~5.7.2"
   }
 }
