--- a/package.json
+++ b/package.json
@@ -17,11 +17,19 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-select/ng-select": "^14.7.0",
+    "@sweetalert2/ngx-sweetalert2": "^13.0.0",
+    "@types/file-saver": "^2.0.7",
     "bootstrap": "^5.3.6",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "ng-select2-component": "^17.2.5",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.0",
     "tabulator-tables": "^6.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,12 +39,14 @@
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/tabulator-tables": "^6.2.6",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "or": "^0.2.0",
     "typescript": "~5.7.2"
   }
 }
