--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sweetalert2": "^11.21.0",
     "tabulator-tables": "^6.3.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
