--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
     "@types/tabulator-tables": "^6.2.6",
     "jasmine-core": "~5.6.0",
