--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "overlayscrollbars": "^2.11.2",
     "rxjs": "~7.8.0",
     "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.21.2",
     "tabulator-tables": "^6.3.1",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
