--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-select/ng-select": "^14.7.0",
     "bootstrap": "^5.3.6",
+    "choices.js": "^11.1.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "ng-select2-component": "^17.2.5",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.1",
     "tabulator-tables": "^6.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,12 +35,15 @@
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
+    "@types/tabulator-tables": "^6.2.6",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "or": "^0.2.0",
     "typescript": "~5.7.2"
   }
 }
