--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+src/app/app.component.html
+src/app/app.component.ts
+src/app/app.config.ts
+src/app/app.routes.ts
