update: update giao dien

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/router": "^19.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ng-select/ng-select": "^14.7.0",
+    "@popperjs/core": "^2.11.8",
     "@types/select2": "^4.0.63",
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "luxon": "^3.6.1",
