--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ng-select/ng-select": "^14.7.0",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "@types/file-saver": "^2.0.7",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
