--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               }
             ],
             "styles": [
-              "node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "node_modules/@ng-select/ng-select/themes/ant.design.theme.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
